--- a/ServletTest/WebContent/WEB-INF/web.xml
+++ b/ServletTest/WebContent/WEB-INF/web.xml
@@ -5,6 +5,7 @@
 	<servlet>
 		<servlet-name>T01ServletLifeCycle</servlet-name>
 		<servlet-class>kr.or.ddit.basic.T01ServletLifeCycle</servlet-class>
+		<load-on-startup>1</load-on-startup>
 	</servlet> 
 	
 	<servlet-mapping>
@@ -71,7 +72,109 @@
 		<servlet-name>T06ServletSessionTest</servlet-name>
 		<url-pattern>/T06ServletSessionTest/*</url-pattern>
 	</servlet-mapping>
+
+
+	<servlet>
+		<servlet-name>T07ServletContextTest</servlet-name>
+		<servlet-class>kr.or.ddit.basic.T07ServletContextTest</servlet-class>
+	</servlet>
 	
+	<servlet-mapping>
+		<servlet-name>T07ServletContextTest</servlet-name>
+		<url-pattern>/T07ServletContextTest</url-pattern>
+	</servlet-mapping>
+	
+	
+	<servlet>
+		<servlet-name>T09ServletContextListenerTest</servlet-name>
+		<servlet-class>kr.or.ddit.basic.T09ServletContextListenerTest</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>T09ServletContextListenerTest</servlet-name>
+		<url-pattern>/T09ServletContextListenerTest</url-pattern>
+	</servlet-mapping>
+	
+	
+	<servlet>
+		<servlet-name>T10ServletRequestListenerTest</servlet-name>
+		<servlet-class>kr.or.ddit.basic.T10ServletRequestListenerTest</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>T10ServletRequestListenerTest</servlet-name>
+		<url-pattern>/T10ServletRequestListenerTest</url-pattern>
+	</servlet-mapping>
+	
+	
+	<servlet>
+		<servlet-name>T11HttpSessionListenerTest</servlet-name>
+		<servlet-class>kr.or.ddit.basic.T11HttpSessionListenerTest</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>T11HttpSessionListenerTest</servlet-name>
+		<url-pattern>/T11HttpSessionListenerTest</url-pattern>
+	</servlet-mapping>
+	
+		<servlet>
+		<servlet-name>T12ImageServlet</servlet-name>
+		<servlet-class>kr.or.ddit.basic.T12ImageServlet</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>T12ImageServlet</servlet-name>
+		<url-pattern>/T12ImageServlet</url-pattern>
+	</servlet-mapping>
+	
+	
+	
+	
+	<listener>
+		<listener-class>kr.or.ddit.basic.MyServletContextListener</listener-class>
+	</listener>
+	
+	
+	<listener>
+		<listener-class>kr.or.ddit.basic.MyServletRequestListener</listener-class>
+	</listener>
+	
+	
+	<listener>
+		<listener-class>kr.or.ddit.basic.MyHttpSessionListener</listener-class>
+	</listener>
+	
+	
+	
+	
+	
+	
+	<filter>
+		<filter-name>T08ServletFilter2</filter-name>
+		<filter-class>kr.or.ddit.basic.T08ServletFilter2</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>T08ServletFilter2</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+	<filter>
+		<filter-name>T08ServletFilter</filter-name>
+		<filter-class>kr.or.ddit.basic.T08ServletFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>T08ServletFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+	
+	
+	
+	
+	
+	
+	
+
 	
 	
 	<error-page>
